--- a/.github/workflows/YEOJUNG-BACKEND-CICD.yml
+++ b/.github/workflows/YEOJUNG-BACKEND-CICD.yml
@@ -29,7 +29,10 @@ jobs:
       run: ./gradlew build
 
     - name: Run tests
+      env:
+        SPRING_PROFILES_ACTIVE: test
       run: ./gradlew test
+
 
   # CD 작업
   cd:
