--- a/.github/workflows/YEOJUNG-BACKEND-CICD.yml
+++ b/.github/workflows/YEOJUNG-BACKEND-CICD.yml
@@ -25,24 +25,40 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
+    - name: name: YEOJUNG-BACKEND-CICD
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  # CI 작업
+  ci:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew build
-
-    - name: Run tests
-      run: ./gradlew test -Dspring.profiles.active=test \
-                          -DDB_HOST=localhost \
-                          -DDB_NAME=test_db \
-                          -DDB_USERNAME=test_user \
-                          -DDB_PASSWORD=test_pass
-
-
-
-
+      run: ./gradlew clean build -x test
 
   # CD 작업
   cd:
     runs-on: ubuntu-latest
-    needs: ci  
+    needs: ci
 
     steps:
     - name: Checkout code
@@ -51,47 +67,106 @@ jobs:
     - name: Docker login
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }} 
-        password: ${{ secrets.DOCKERHUB_TOKEN }} 
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
 
     - name: Deploy to AWS EC2
       run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} << 'EOF'
-          docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
-          
-          docker stop yeojung-backend || true
-          docker rm yeojung-backend || true
-          
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "
+          docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest && \
+          docker stop yeojung-backend || true && \
+          docker rm yeojung-backend || true && \
           docker run -d -p 8081:8080 --name yeojung-backend \
-            -e DB_HOST=${{ secrets.DB_HOST }} \
-            -e DB_NAME=${{ secrets.DB_NAME }} \
-            -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
-            -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-            -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
-            ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
-        EOF
-        
+          -e DB_HOST='${{ secrets.DB_HOST }}' \
+          -e DB_NAME='${{ secrets.DB_NAME }}' \
+          -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
+          -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
+          -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
+          ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest"
+
     - name: Health check
       run: |
-        echo "Checking container health..."
-        curl --fail http://localhost:8080/health || exit 1
-        
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "curl --fail http://localhost:8081/health || exit 1"
+
     - name: Rollback deployment if health check fails
+      if: failure()
       run: |
-        if ! curl --fail http://localhost:8080/health; then
-          echo "Health check failed, rolling back..."
-          docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version
-          docker run -d -p 8081:8080 --name yeojung-backend ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version
-        fi
-    
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "
+          docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version && \
+          docker stop yeojung-backend || true && \
+          docker rm yeojung-backend || true && \
+          docker run -d -p 8081:8080 --name yeojung-backend \
+          -e DB_HOST='${{ secrets.DB_HOST }}' \
+          -e DB_NAME='${{ secrets.DB_NAME }}' \
+          -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
+          -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
+          -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
+          ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version"
+
     - name: Check logs after deployment
       run: |
-        docker logs yeojung-backend
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "docker logs yeojung-backend"
+Build with Gradle
+      run: ./gradlew clean build -x test
+
+  # CD 작업
+  cd:
+    runs-on: ubuntu-latest
+    needs: ci
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Docker login
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
+
+    - name: Deploy to AWS EC2
+      run: |
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "
+          docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest && \
+          docker stop yeojung-backend || true && \
+          docker rm yeojung-backend || true && \
+          docker run -d -p 8081:8080 --name yeojung-backend \
+          -e DB_HOST='${{ secrets.DB_HOST }}' \
+          -e DB_NAME='${{ secrets.DB_NAME }}' \
+          -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
+          -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
+          -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
+          ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest"
+
+    - name: Health check
+      run: |
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "curl --fail http://localhost:8081/health || exit 1"
+
+    - name: Rollback deployment if health check fails
+      if: failure()
+      run: |
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "
+          docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version && \
+          docker stop yeojung-backend || true && \
+          docker rm yeojung-backend || true && \
+          docker run -d -p 8081:8080 --name yeojung-backend \
+          -e DB_HOST='${{ secrets.DB_HOST }}' \
+          -e DB_NAME='${{ secrets.DB_NAME }}' \
+          -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
+          -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
+          -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
+          ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version"
+
+    - name: Check logs after deployment
+      run: |
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "docker logs yeojung-backend"
