--- a/.github/workflows/YEOJUNG-BACKEND-CICD.yml
+++ b/.github/workflows/YEOJUNG-BACKEND-CICD.yml
@@ -7,7 +7,6 @@ on:
     branches: ["main"]
 
 jobs:
-  # CI 작업
   ci:
     runs-on: ubuntu-latest
 
@@ -28,7 +27,6 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
-  # CD 작업
   cd:
     runs-on: ubuntu-latest
     needs: ci
@@ -36,6 +34,19 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
 
       - name: Docker login
         uses: docker/login-action@v3
@@ -49,38 +60,56 @@ jobs:
           docker push ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
 
       - name: Deploy to AWS EC2
-        run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "
-            docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest && \
-            docker stop yeojung-backend || true && \
-            docker rm yeojung-backend || true && \
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_EC2_IP }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
+            docker stop yeojung-backend || true
+            docker rm yeojung-backend || true
             docker run -d -p 8081:8080 --name yeojung-backend \
-            -e DB_HOST='${{ secrets.DB_HOST }}' \
-            -e DB_NAME='${{ secrets.DB_NAME }}' \
-            -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
-            -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
-            -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
-            ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest"
+              -e DB_HOST='${{ secrets.DB_HOST }}' \
+              -e DB_NAME='${{ secrets.DB_NAME }}' \
+              -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
+              -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
+              -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
+              ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:latest
 
       - name: Health check
-        run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "curl --fail http://localhost:8081/health || exit 1"
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_EC2_IP }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sleep 10
+            curl --fail http://localhost:8081/health || exit 1
 
       - name: Rollback deployment if health check fails
         if: failure()
-        run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "
-            docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version && \
-            docker stop yeojung-backend || true && \
-            docker rm yeojung-backend || true && \
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_EC2_IP }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version
+            docker stop yeojung-backend || true
+            docker rm yeojung-backend || true
             docker run -d -p 8081:8080 --name yeojung-backend \
-            -e DB_HOST='${{ secrets.DB_HOST }}' \
-            -e DB_NAME='${{ secrets.DB_NAME }}' \
-            -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
-            -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
-            -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
-            ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version"
+              -e DB_HOST='${{ secrets.DB_HOST }}' \
+              -e DB_NAME='${{ secrets.DB_NAME }}' \
+              -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
+              -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
+              -e JWT_SECRET_KEY='${{ secrets.JWT_SECRET_KEY }}' \
+              ${{ secrets.DOCKER_USERNAME }}/yeojung-backend:previous-version
 
       - name: Check logs after deployment
-        run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.AWS_EC2_IP }} "docker logs yeojung-backend"
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_EC2_IP }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: docker logs yeojung-backend
