--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: mysql:8.0
     container_name: yeojung-mysql-1
     environment:
-      MYSQL_ROOT_PASSWORD: yeO123!jung
-      MYSQL_DATABASE: yeojung_db
-      MYSQL_USER: yjmem
-      MYSQL_PASSWORD: yeO123!jung
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     ports:
       - "3307:3306"
     networks:
@@ -27,7 +27,7 @@ services:
     container_name: yeojung-backend-app
     depends_on:
       mysql:
-        condition: service_healthy #MySQL이 완전히 실행된 후 시작
+        condition: service_healthy
     ports:
       - "8080:8080"
     env_file:
